# cubescript

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: tests.yml
include/cubescript/: cubescript.hh
src/: CMakeLists.txt  cs_gen.cc  cs_print.hh  cs_vm.cc  cubescript.cc
subprojects/libostd/: .gitignore
subprojects/libostd/src/asm/mips32/: make_mips32_o32_elf_gas.S
tests/: CMakeLists.txt  conanfile.txt  tests.cc  tests.cpp
tests/files/: basic.cfg
tools/: CMakeLists.txt  edit_linenoise.hh  meson.build  repl.cc
