option('repl_tool',
    type: 'boolean',
    value: true,
    description: 'Build Read-eval-print loop tool'
)

option('readline',
    type: 'boolean',
    value: false,
    description: 'Use GNU readline for the REPL'
)

option('linenoise',
    type: 'boolean',
    value: true,
    description: 'Use linenoise for the REPL'
)
